# bazel_rules_nvc

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.help.bazel  GEMINI.md  MODULE.bazel  README.md  TODO.MODULE-migration  WORKSPACE  deps_22_04.lock.json  deps_24_04.lock.json  help.bzl  macros.bzl  macros.md  nvc_deps.yaml
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: build.yml  tag-and-release.yml
doc/: README.md  cosim_bridge_architecture.md  cosim_usage_example.md  simulation_vs_synthesis.md
integration/: .bazelrc  BUILD.bazel  MODULE.bazel  test.v
integration/basic/: BUILD.bazel  test.vhdl
integration/cosim/: BUILD.bazel  dut.v  top_tb.vhdl
integration/cosim_manual_entity/: BUILD.bazel  dut.v  dut_entity.vhdl  top_tb.vhdl
integration/cosim_param/: BUILD.bazel  adder.v  top_tb.vhdl
integration/cosim_separate/: BUILD.bazel  top_tb.vhdl
integration/demo/: BUILD.bazel  adder.sv  counter.sv  demo_top.sv  top_tb.vhdl
integration/relaxed/: BUILD.bazel  relaxed.vhdl
integration/sim/: BUILD.bazel  README.md  clkgen.vhdl  clkgen_test.vhdl  resetgen.vhdl
integration/systemverilog/: BUILD.bazel  counter2.sv
integration/two_libraries/: BUILD.bazel  package.vhdl  test.vhdl
internal/: BUILD.bazel  cosim.bzl  deb_extract.bzl  extract_file.bzl  extract_file.md  file_shunt.bash  macros.bzl  macros.md  nvc_verilog_library.bzl  nvc_verilog_library.md  nvc_vhdl_elaborate.bzl  nvc_vhdl_elaborate.md  nvc_vhdl_library.bzl  nvc_vhdl_library.md  nvc_vhdl_run.bzl  nvc_vhdl_run.md  nvc_vhdl_test.bzl  nvc_vhdl_test.md  prebuilt_library.bzl  prebuilt_library.md  produce_waveform.bzl  produce_waveform.md  providers.bzl  providers.md  toolchain.bzl  toolchain.md  utils.bzl  utils.md  verilog_library.bzl  verilog_library.md  vhdl_elaborate.bzl  vhdl_elaborate.md  vhdl_library.bzl  vhdl_library.md  vhdl_run.bzl  vhdl_run.md  vhdl_test.bzl  vhdl_test.md
internal/config/: BUILD.bazel
internal/cosim/: BUILD.bazel  generate_bridge  generate_bridge.go  generate_bridge_test.go  vpi_user.h  vpi_wrapper.cpp
nvc/: BUILD.bazel  rules.bzl  rules.md
