load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

bzl_library(
    name = "macros",
    srcs = ["macros.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//build/nvc:rules"],
)

sh_test(
    name = "test",
    srcs = [
        "test.bash",
    ],
    size = "small",
)
