load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

# gazelle:prefix github.com/filmil/bazel_rules_nvc

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@bazel_skylib_gazelle_plugin//bzl",
    ],
)

bzl_library(
    name = "macros",
    srcs = ["macros.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//build/nvc:rules"],
)

stardoc(
    name = "md",
    out = "gen.macros.md",
    input = "macros.bzl",
    deps = [":macros"],
)

write_source_files(
    name = "update",
    files = {
        "macros.md": ":md",
    },
)

sh_test(
    name = "test",
    size = "small",
    srcs = [
        "test.bash",
    ],
)
