module(
    name = "rules_nvc",
    version = "0.0.0",
)

bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "bazel_linux_packages", version = "0.3.1")
single_version_override(
    module_name = "bazel_linux_packages",
    patch_strip = 1,
    patches = ["//third_party:bazel_linux_packages_rules_shell.patch"],
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "gotopt2", version = "2.5.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "protobuf", version = "35.0")

# If not mentioned here, build will fail on github actions. :/
bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_verilator", version = "1.0.0")
bazel_dep(name = "rules_verilog", version = "1.1.0")
bazel_dep(name = "stardoc", version = "0.8.1")

apt = use_extension("@bazel_linux_packages//apt:extensions.bzl", "apt")
apt.ubuntu(
    name = "deps_24_04",
    architectures = ["amd64"],
    lockfile = "//:deps_24_04.lock.json",
    packages = [
        "libdw1",
        "libelf1",
        "libffi8",
        "libllvm18",
        "libreadline8",
        "libtcl8.6",
        "libzstd1",
        "zlib1g",
    ],
    suites = ["noble"],
)
use_repo(
    apt,
    "deps_24_04",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

register_toolchains("//build/nvc:nvc_linux_toolchain")

deb_extract = use_repo_rule("//internal:deb_extract.bzl", "deb_extract")

deb_extract(
    name = "nvc_deb_24_04",
    integrity = "sha256-rh08AlQ9rITN3nlITX4BisvMjZtvBoAnk7QU0aJwwxo=",
    urls = ["https://github.com/nickg/nvc/releases/download/r1.20.1/nvc_1.20.1-1_amd64_ubuntu-24.04.deb"],
)

bazel_dep(name = "portable_cc_toolchain", version = "2025.12.16")

toolchain = use_extension("@portable_cc_toolchain//:extensions.bzl", "toolchain")
use_repo(toolchain, "toolchains")

register_toolchains("@toolchains//:toolchainlinux_x86_64linux_x86_64")
