module(
    name = "integration",
    version = "0.0.0",
)

bazel_dep(name = "fshlib", version = "0.2.0")
bazel_dep(name = "gotopt2", version = "2.7.1")
bazel_dep(name = "protobuf", version = "35.0")

# If not mentioned here, build will fail on github actions. :/
bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_nvc", version = "0.0.0")
local_path_override(
    module_name = "rules_nvc",
    path = "../",
)

# Hermetic C/C++ toolchain matching the rules_nvc dev build: a pinned LLVM from
# the BCR. Modern clang/lld build the nvc compiler (a tool dependency of the
# VHDL rules) from source cleanly.
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
