load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(
    default_visibility = [
        "//build/nvc:__pkg__",
        "//nvc:__pkg__",
    ],
)

exports_files(["file_shunt.bash"])

bzl_library(
    name = "extract_file",
    srcs = ["extract_file.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_extract_file",
    out = "gen.extract_file.md",
    input = "extract_file.bzl",
    deps = [":extract_file"],
)

bzl_library(
    name = "prebuilt_library",
    srcs = ["prebuilt_library.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_prebuilt_library",
    out = "gen.prebuilt_library.md",
    input = "prebuilt_library.bzl",
    deps = [":prebuilt_library"],
)

bzl_library(
    name = "produce_waveform",
    srcs = ["produce_waveform.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_produce_waveform",
    out = "gen.produce_waveform.md",
    input = "produce_waveform.bzl",
    deps = [":produce_waveform"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    deps = [":providers"],
)

stardoc(
    name = "md_toolchain",
    out = "gen.toolchain.md",
    input = "toolchain.bzl",
    deps = [":toolchain"],
)

bzl_library(
    name = "vhdl_elaborate",
    srcs = ["vhdl_elaborate.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_vhdl_elaborate",
    out = "gen.vhdl_elaborate.md",
    input = "vhdl_elaborate.bzl",
    deps = [":vhdl_elaborate"],
)

bzl_library(
    name = "vhdl_library",
    srcs = ["vhdl_library.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_vhdl_library",
    out = "gen.vhdl_library.md",
    input = "vhdl_library.bzl",
    deps = [":vhdl_library"],
)

bzl_library(
    name = "vhdl_run",
    srcs = ["vhdl_run.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_vhdl_run",
    out = "gen.vhdl_run.md",
    input = "vhdl_run.bzl",
    deps = [":vhdl_run"],
)

bzl_library(
    name = "vhdl_test",
    srcs = ["vhdl_test.bzl"],
    deps = [
        ":vhdl_elaborate",
        ":vhdl_library",
    ],
)

stardoc(
    name = "md_vhdl_test",
    out = "gen.vhdl_test.md",
    input = "vhdl_test.bzl",
    deps = [":vhdl_test"],
)

bzl_library(
    name = "verilog_library",
    srcs = ["verilog_library.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_verilog_library",
    out = "gen.verilog_library.md",
    input = "verilog_library.bzl",
    deps = [":verilog_library"],
)

# Removed bzl_library for cosim because of external dependency issues.

bzl_library(
    name = "macros",
    srcs = ["macros.bzl"],
    deps = [
        "@rules_shell//shell:rules_bzl",
    ],
)

stardoc(
    name = "md_macros",
    out = "gen.macros.md",
    input = "macros.bzl",
    deps = [":macros"],
)

stardoc(
    name = "md_providers",
    out = "gen.providers.md",
    input = "providers.bzl",
    deps = [":providers"],
)

stardoc(
    name = "md_utils",
    out = "gen.utils.md",
    input = "utils.bzl",
    deps = [":utils"],
)

write_source_files(
    name = "update",
    files = {
        "extract_file.md": ":md_extract_file",
        "macros.md": ":md_macros",
        "prebuilt_library.md": ":md_prebuilt_library",
        "produce_waveform.md": ":md_produce_waveform",
        "providers.md": ":md_providers",
        "toolchain.md": ":md_toolchain",
        "utils.md": ":md_utils",
        "verilog_library.md": ":md_verilog_library",
        "vhdl_elaborate.md": ":md_vhdl_elaborate",
        "vhdl_library.md": ":md_vhdl_library",
        "vhdl_run.md": ":md_vhdl_run",
        "vhdl_test.md": ":md_vhdl_test",
    },
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
)
