load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

package(
    default_visibility = [
        "//build/nvc:__pkg__",
        "//nvc:__pkg__",
    ],
)

exports_files(["file_shunt.bash"])

bzl_library(
    name = "extract_file",
    srcs = ["extract_file.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_extract_file",
    out = "gen.extract_file.md",
    input = "extract_file.bzl",
    deps = [":extract_file"],
)

bzl_library(
    name = "prebuilt_library",
    srcs = ["prebuilt_library.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_prebuilt_library",
    out = "gen.prebuilt_library.md",
    input = "prebuilt_library.bzl",
    deps = [":prebuilt_library"],
)

bzl_library(
    name = "produce_waveform",
    srcs = ["produce_waveform.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_produce_waveform",
    out = "gen.produce_waveform.md",
    input = "produce_waveform.bzl",
    deps = [":produce_waveform"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    deps = [":providers"],
)

stardoc(
    name = "md_toolchain",
    out = "gen.toolchain.md",
    input = "toolchain.bzl",
    deps = [":toolchain"],
)

bzl_library(
    name = "nvc_vhdl_elaborate",
    srcs = ["nvc_vhdl_elaborate.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_nvc_vhdl_elaborate",
    out = "gen.nvc_vhdl_elaborate.md",
    input = "nvc_vhdl_elaborate.bzl",
    deps = [":nvc_vhdl_elaborate"],
)

bzl_library(
    name = "rules_vhdl_defs",
    srcs = ["@rules_vhdl//vhdl:defs.bzl"],
    deps = [
        "@rules_vhdl//vhdl:defs_bzl",
    ],
)

bzl_library(
    name = "nvc_vhdl_library",
    srcs = ["nvc_vhdl_library.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
        ":rules_vhdl_defs",
    ],
)

stardoc(
    name = "md_nvc_vhdl_library",
    out = "gen.nvc_vhdl_library.md",
    input = "nvc_vhdl_library.bzl",
    deps = [":nvc_vhdl_library"],
)

bzl_library(
    name = "nvc_vhdl_run",
    srcs = ["nvc_vhdl_run.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_nvc_vhdl_run",
    out = "gen.nvc_vhdl_run.md",
    input = "nvc_vhdl_run.bzl",
    deps = [":nvc_vhdl_run"],
)

bzl_library(
    name = "nvc_vhdl_test",
    srcs = ["nvc_vhdl_test.bzl"],
    deps = [
        ":nvc_vhdl_elaborate",
        ":nvc_vhdl_library",
    ],
)

stardoc(
    name = "md_nvc_vhdl_test",
    out = "gen.nvc_vhdl_test.md",
    input = "nvc_vhdl_test.bzl",
    deps = [":nvc_vhdl_test"],
)

bzl_library(
    name = "nvc_verilog_library",
    srcs = ["nvc_verilog_library.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        ":utils",
    ],
)

stardoc(
    name = "md_nvc_verilog_library",
    out = "gen.nvc_verilog_library.md",
    input = "nvc_verilog_library.bzl",
    deps = [":nvc_verilog_library"],
)

# Removed bzl_library for cosim because of external dependency issues.

bzl_library(
    name = "macros",
    srcs = ["macros.bzl"],
    deps = [
        "@rules_shell//shell:rules_bzl",
    ],
)

stardoc(
    name = "md_macros",
    out = "gen.macros.md",
    input = "macros.bzl",
    deps = [":macros"],
)

stardoc(
    name = "md_providers",
    out = "gen.providers.md",
    input = "providers.bzl",
    deps = [":providers"],
)

stardoc(
    name = "md_utils",
    out = "gen.utils.md",
    input = "utils.bzl",
    deps = [":utils"],
)

write_source_files(
    name = "update",
    files = {
        "extract_file.md": ":md_extract_file",
        "macros.md": ":md_macros",
        "prebuilt_library.md": ":md_prebuilt_library",
        "produce_waveform.md": ":md_produce_waveform",
        "providers.md": ":md_providers",
        "toolchain.md": ":md_toolchain",
        "utils.md": ":md_utils",
        "nvc_verilog_library.md": ":md_nvc_verilog_library",
        "nvc_vhdl_elaborate.md": ":md_nvc_vhdl_elaborate",
        "nvc_vhdl_library.md": ":md_nvc_vhdl_library",
        "nvc_vhdl_run.md": ":md_nvc_vhdl_run",
        "nvc_vhdl_test.md": ":md_nvc_vhdl_test",
    },
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
)
