load(
    "@bazel_rules_nvc//build/nvc:rules.bzl",
    "vhdl_elaborate",
    "vhdl_library",
    "vhdl_run",
)

vhdl_library(
    name = "work",
    srcs = [
        "test.vhdl",
    ],
    entities = ["hello_world"],
)

vhdl_elaborate(
    name = "hello_world",
    library = ":work",
)

vhdl_run(
    name = "sim",
    entity = ":hello_world",
)
