load(
    "@rules_nvc//build/nvc:rules.bzl",
    "vhdl_elaborate",
    "vhdl_library",
    "vhdl_run",
)
load("@rules_nvc//internal:macros.bzl", "wave_view")

vhdl_library(
    name = "work",
    srcs = [
        "test.vhdl",
    ],
    entities = ["hello_world"],
)

vhdl_elaborate(
    name = "hello_world",
    library = ":work",
)

vhdl_run(
    name = "sim",
    entity = ":hello_world",
)

wave_view(
    name = "wave",
    vhdl_run = ":sim",
)
