load(
    "@rules_nvc//build/nvc:rules.bzl",
    "nvc_vhdl_elaborate",
    "nvc_vhdl_library",
    "nvc_vhdl_run",
)
load("@rules_nvc//internal:macros.bzl", "wave_view")

nvc_vhdl_library(
    name = "work",
    srcs = [
        "test.vhdl",
    ],
    entities = ["hello_world"],
)

nvc_vhdl_elaborate(
    name = "hello_world",
    library = ":work",
)

nvc_vhdl_run(
    name = "sim",
    entity = ":hello_world",
)

wave_view(
    name = "wave",
    nvc_vhdl_run = ":sim",
)
