load("@rules_nvc//internal:cosim.bzl", "nvc_verilator_cosim")
load("@rules_nvc//nvc:rules.bzl", "vhdl_test")

nvc_verilator_cosim(
    name = "cosim_bridge",
    srcs = ["dut.v"],
    top_modules = ["dut"],
    # `path_prefix` relies on the default ":top_tb:dut_inst" mapped
    # inside `nvc_verilator_cosim`.
)

vhdl_test(
    name = "cosim_test",
    srcs = ["top_tb.vhdl"],
    deps = [
        ":cosim_bridge",
    ],
    entity = "top_tb",
    args = ["--vhpi-trace", "--vhpi-debug"],
)
