load("@rules_nvc//internal:cosim.bzl", "nvc_verilator_cosim")
load("@rules_nvc//nvc:rules.bzl", "nvc_vhdl_test")

nvc_verilator_cosim(
    name = "cosim_bridge",
    srcs = ["dut.v"],
    top_module = "dut",
    path_prefix = ":top_tb:dut_inst",
)

nvc_vhdl_test(
    name = "cosim_test",
    srcs = ["top_tb.vhdl"],
    deps = [
        ":cosim_bridge",
    ],
    entity = "top_tb",
    args = ["--vhpi-trace", "--vhpi-debug"],
)
