load("@rules_nvc//internal:cosim.bzl", "nvc_verilator_cosim")
load("@rules_nvc//nvc:rules.bzl", "nvc_vhdl_test")

nvc_verilator_cosim(
    name = "cosim_bridge",
    srcs = ["adder.v"],
    top_module = "adder",
    path_prefix = ":top_tb:dut_inst",
    parameters = {
        "WIDTH": "16",
    },
)

nvc_vhdl_test(
    name = "cosim_test",
    srcs = ["top_tb.vhdl"],
    deps = [
        ":cosim_bridge",
    ],
    entity = "top_tb",
    args = ["--vhpi-trace", "--vhpi-debug"],
)
