# LICENSE sha256: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4

load("@rules_nvc//internal:cosim.bzl", "nvc_verilator_cosim")
load("@rules_nvc//nvc:rules.bzl", "vhdl_test", "vhdl_library")

nvc_verilator_cosim(
    name = "cosim_bridge",
    srcs = ["dut.v"],
    top_module = "dut",
    path_prefix = ":top_tb:dut_inst",
    separate_entity_arch = True,
)

vhdl_test(
    name = "cosim_test",
    srcs = ["top_tb.vhdl"],
    deps = [
        ":cosim_bridge",
    ],
    entity = "top_tb",
    args = ["--vhpi-trace", "--vhpi-debug"],
)

