load(
    "@rules_nvc//build/nvc:rules.bzl",
    "vhdl_elaborate",
    "vhdl_library",
    "vhdl_run",
)

# Demonstrates `analysis_opts`: this file only analyzes with `--relaxed`
# under VHDL-2008 (it declares a shared variable of a non-protected type).
vhdl_library(
    name = "work",
    srcs = [
        "relaxed.vhdl",
    ],
    analysis_opts = ["--relaxed"],
    entities = ["relaxed_top"],
    standard = "2008",
)

vhdl_elaborate(
    name = "relaxed_top",
    library = ":work",
    standard = "2008",
)

# standard must match the library/elaborate standard, otherwise `nvc -r`
# aborts with a STD.STANDARD version conflict.
# use_fst: relaxed_top has no traced signals (only a shared variable), so
# nvc's VCD path (dump to a temporary FST, then convert) has nothing to open
# and fails; FST is nvc's native format and dumps directly.
vhdl_run(
    name = "sim",
    entity = ":relaxed_top",
    standard = "2008",
    use_fst = True,
)
