load("@bazel_rules_nvc//build/nvc:rules.bzl", "vhdl_elaborate", "vhdl_library", "vhdl_run", "vhdl_test")

vhdl_library(
    name = "sim",
    srcs = [
        "clkgen.vhdl",
        "resetgen.vhdl",
    ],
)

vhdl_test(
    name = "sim_test",
    srcs = [
        "clkgen_test.vhdl",
    ],
    deps = [
        ":sim",
    ],
    entities = [
        "tb", "config_tb2",
    ]
)
