load("@rules_nvc//build/nvc:rules.bzl", "nvc_vhdl_elaborate", "nvc_vhdl_library", "nvc_vhdl_run", "nvc_vhdl_test")

nvc_vhdl_library(
    name = "sim",
    srcs = [
        "clkgen.vhdl",
        "resetgen.vhdl",
    ],
)

nvc_vhdl_test(
    name = "sim_test",
    srcs = [
        "clkgen_test.vhdl",
    ],
    deps = [
        ":sim",
    ],
    entities = [
        "tb", "config_tb2",
    ]
)
