load("@rules_nvc//build/nvc:rules.bzl", "nvc_verilog_library")

package(default_visibility = ["//visibility:public"])

nvc_verilog_library(
    name = "nvc_verilog",
    srcs = [
        "counter.sv",
    ],
    includes = [
        "systemverilog",
    ],
)

nvc_verilog_library(
    name = "counter2",
    srcs = [
        "counter2.sv",
    ],
    hdrs = [
        "counter.sv",
    ],
    deps = [
        ":nvc_verilog",
    ],
    includes = [
        "systemverilog",
    ],
)
