load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "ubuntu_version",
    build_setting_default = "22.04",
    values = ["22.04", "24.04"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ubuntu_22_04",
    flag_values = {
        ":ubuntu_version": "22.04",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ubuntu_24_04",
    flag_values = {
        ":ubuntu_version": "24.04",
    },
    visibility = ["//visibility:public"],
)
